# optimization-papers-rss

./: .gitignore  pyproject.toml
data/: state.json
docs/: feed.xml  index.html
src/optimization_rss/: config.py  rss.py
tests/: conftest.py  test_dedupe.py  test_filters.py  test_main.py  test_rss.py  test_state.py
tests/sources/: test_arxiv.py  test_semantic_scholar.py
